--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "root",
-    "password": "admin",
+    "username": "",
+    "password": "",
     "database": "escola_ingles",
     "host": "127.0.0.1",
     "dialect": "mysql",
